--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: csharp
 solution: IntroToAspNetMvc.sln
+install:
+  - sudo apt-get install -y gtk-sharp2
+  - nuget restore IntroToAspNetMvc.sln
